# gallery_rs

./: Cargo.toml  README.md  config.toml
src/: config.rs  handlers.rs  main.rs  routers.rs
src/base/: mod.rs
src/base/response/: list_resp.rs  mod.rs  simple_resp.rs
src/handler/: detail.rs  list.rs  list_pic.rs  mod.rs  pic_detail.rs
src/infrastructure/: minio.rs
src/model/: dto.rs  mod.rs  request.rs
