[package]
name = "gallery_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
minio = { version = "0.1" }
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = { version = "0.8" }
lazy_static = { version = "1" }
